Too lazy to write descriptive message! 🙃

--- a/src/Baconx/Baconx.Core/packages.config
+++ b/src/Baconx/Baconx.Core/packages.config
@@ -13,6 +13,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="PropertyChanged.Fody" version="1.52.1" targetFramework="portable45-net45+win8+wp8+wpa81" developmentDependency="true" />
   <package id="Punchclock" version="2.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Refractored.MvvmHelpers" version="1.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Rx-Core" version="2.2.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable45-net45+win8+wp8+wpa81" />
@@ -27,5 +28,6 @@
   <package id="System.Reactive.Linq" version="3.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugins.Settings" version="2.5.1.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
