--- a/src/Baconx/Baconx.Core/Baconx.csproj
+++ b/src/Baconx/Baconx.Core/Baconx.csproj
@@ -62,6 +62,8 @@
       <DependentUpon>DetailPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Base\BasePage.cs" />
+    <Compile Include="Extensions\NavigationExtensions.cs" />
+    <Compile Include="Services\INavigationService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
